// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar AppBar should match snapshot 1`] = `
<header
  className="appbar"
>
  Snapshot
</header>
`;

exports[`AppBar AppBarContainer should match snapshot 1`] = `
<section
  className="appbar-section"
>
  Snapshot
</section>
`;

exports[`AppBar AppBarIcon should match snapshot 1`] = `
<a
  className="appbar-icon"
  href="#"
>
  Snapshot
</a>
`;

exports[`AppBar AppBarNav should match snapshot 1`] = `
<nav
  className="appbar-section"
>
  Snapshot
</nav>
`;

exports[`AppBar AppBarTab should match snapshot 1`] = `
<a
  className="appbar-tab"
  href="#"
>
  Snapshot
</a>
`;

exports[`AppBar AppBarTitle should match snapshot 1`] = `
<h1
  className="appbar-title"
>
  Snapshot
</h1>
`;
